@@ -1,6 +1,8 @@
 2013-01-06  Pedro Vicente  <pvicente@uci.edu>
 
 	* Add ncwa regression #55: Chunking -a time --cnk_dmn lon,4 -v byt_3D_rec
+	
+	* Add ncwa regression #56: Chunking -a /time --cnk_dmn /time,1 -v time
 
 2014-01-06  Charlie Zender  <zender@uci.edu>
 
